<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DUE!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="button_send">Send</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_signup_sub">Signup_sub</string>
    <string name="title_activity_assignmetns">Assignments</string>
    <string name="title_activity_view_assignment">ViewAssignment</string>
    <string name="action_add_assign">Add Assignment</string>
    <string name="action_add_class">Add Class</string>
    <string name="action_view_asspeers">Assignment Peers</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_add_assignment">Add Assignment</string>
    <string name="title">Title</string>
    <string name="submmit">Submmit</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="duedate">Due Date:</string>
    <string name="course">Course</string>
    <string name="time">Time</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="title_activity_add_class">AddClass</string>

    <string-array name="course_arrays"></string-array>

    <string name="course_prompt">Choose a course</string>
    <string name="title_activity_view_peers">ViewPeers</string>

</resources>