<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cs242.due.Assignmetns" >

        	<item android:id="@+id/action_logout"
          android:icon="@drawable/logout"
          android:title="@string/action_logout" 
          app:showAsAction="always"
          />
        		    		
    		<item android:id="@+id/action_add_assign"
          android:icon="@drawable/add_assign"
          android:title="@string/action_add_assign" 
          app:showAsAction="always"
          />
    		<item android:id="@+id/action_add_class"
          android:icon="@drawable/add_class"
          android:title="@string/action_add_class" 
          app:showAsAction="always"
          />
    		
    		    		<item android:id="@+id/action_refresh"
          android:icon="@drawable/refresh"
          android:title="@string/action_refresh" 
          app:showAsAction="always"
          />

</menu>
