<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs242.due.AddAssignment" >

    <EditText
        android:id="@+id/addtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textborder"
        android:padding="10dp"
        android:hint="@string/title"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/addcourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/course_arrays"
        android:prompt="@string/course_prompt"
                android:layout_marginBottom="20dp"
        android:background="@drawable/textborder"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/adddate"
        android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textborder"
            android:padding="10dp"
            android:hint="@string/date"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:text="@string/pick_date" />

    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <EditText
        android:id="@+id/addtime"
        android:layout_width="144dp"
                    android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textborder"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/time"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                    android:layout_weight="1"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time" />
</LinearLayout>
    <EditText
        android:id="@+id/addcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textborder"
        android:minHeight="100dp"
        android:padding="10dp"
        android:hint="@string/content"
        android:textSize="20sp" />

    <Button
        android:id="@+id/submmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="submmit"
        android:text="@string/submmit" />

</LinearLayout>